Diseño de index principal

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Race-Weather</title>
 </head>
 <body>
-    
+    <H1>GP</H1>
 </body>
 </html>
