--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <title>Race-Weather</title>
 </head>
 <body>
-    <H1>GP</H1>
+    <H1>Formula 1 Lenovo Hungarian GP 2025</H1>
+    <h2>Previsión meteorológica</h2>
+    <div class="weather">
+        <h3>Viernes 3 de Agosto</h3>
+        <p>Temperatura: 30°C</p>
+        <p>Condiciones: Soleado</p>
+        <p>Probabilidad de lluvia: 0%</p>
+        <p>Viento: 10 km/h</p>
+        <h3>Sábado 4 de Agosto</h3>
+        <p>Temperatura: 32°C</p>
+        <p>Condiciones: Soleado</p>
+        <p>Probabilidad de lluvia: 0%</p>
+        <p>Viento: 12 km/h</p>
+        <h3>Domingo 5 de Agosto</h3>
+        <p>Temperatura: 31°C</p>
+        <p>Condiciones: Soleado</p>
+        <p>Probabilidad de lluvia: 0%</p>
+        <p>Viento: 8 km/h</p>
+    </div>
+    <h2>Información del circuito</h2>
+    <div class="circuit-info">
+        <p>Nombre: Hungaroring</p>
+        <p>Longitud: 4.381 km</p>
+        <p>Curvas: 14</p>
+        <p>Fecha de inauguración: 1986</p>
+        <p>Capacidad: 70,000 espectadores</p>
+        <p>Características: Circuito técnico con muchas curvas cerradas y pocas rectas.</p>
+        <p>Última victoria: Max Verstappen (2024)</p>
+        <p>Récord de vuelta: 1:14.722 (Lewis Hamilton, 2020)</p>
+        <p>Datos adicionales: El Hungaroring es conocido por su ambiente caluroso y polvoriento, lo que puede afectar el rendimiento de los neumáticos.</p>
+    </div>
 </body>
+<footer>
+    <p>© Maverick.Dev Todos los derechos reservados</p>
+    <p>Creado por Maverick.Dev</p>
+    <p>Última actualización: 28 de julio de 2025</p>
+    <p>Contacto: s.villalobosd@icloud.com</p>
+</footer>
 </html>
